# mono_ms

./: .gitignore  ;  README.md  question.py
base_rl/: .gitignore  mf_plotting_catch.ipynb  mf_plotting_cp.ipynb  mf_plotting_dyna.ipynb  plots.py  pyproject.toml
base_rl/base_rl/: higher_order.py  models.py  wrappers.py
base_rl/tests/: test_models.py
dyna/: cartpole_dyna_hyper_sweep.py  catch_hyper_sweep.py  dyna_catch.ipynb  dyna_hyp_catch.ipynb  dyna_hyp_cp.ipynb  dyna_plotting_cartpole.ipynb  expert_dyna_plotting.ipynb  expert_dyna_plotting_catch.ipynb  pyproject.toml  render_catch.ipynb  trial.ipynb  trial.py
g_conv/: README.md  c2.py  main.py  pyproject.toml
g_conv/g_conv/: c2.py
g_conv/tests/: test_c2.py
meta_rl/: README.md  plots.py  pyproject.toml
meta_rl/meta_rl/: _typing.py  mutli_seed_script.py  origional_pj_rl.py  pure_jax_rl.py
meta_rl/tests/: test_gpu.py
model_based/: README.md  debug_plots.py  model_correlation.ipynb  plots.py  prox_pool.ipynb  pyproject.toml  train_agent.py  transition_model_catch_plots.ipynb  transition_model_loss.ipynb
model_based/model_based/: higher_order_train.py  learn_trainsition_dynamics.py  main.py  nn_model.py  sample_env.py  train.py  transition_models.py
model_based/tests/: test_catch.py  test_model.py
model_based/transition_model_tree/: checkpoint
model_based/transition_model_tree/params.Dense_0.bias/: 0
model_based/transition_model_tree/params.Dense_0.kernel/: 0.0
model_based/transition_model_tree/params.Dense_1.bias/: 0
model_based/transition_model_tree/params.Dense_1.kernel/: .zarray  0.0
model_based/transition_model_tree/params.Dense_2.bias/: 0
model_based/transition_model_tree/params.Dense_2.kernel/: .zarray  0.0
model_based/transition_model_tree/params.Dense_3.bias/: 0
model_based/transition_model_tree/params.Dense_3.kernel/: .zarray  0.0
model_based/transition_model_tree/params.Dense_4.bias/: 0
model_based/transition_model_tree/params.Dense_4.kernel/: 0.0
msc_thesis/: 1 Introduction.tex  2 Literature Review.tex  3 Methodology.tex  Appendix_cp.tex  Appendix_hyp.tex  Background.tex  BibSettings.tex  Chapter3.tex  Conclusion.tex  Experiments.tex  Experiments_ac.tex  Experiments_dyna.tex  Experiments_mb.tex  Introduction.tex  LiteratureReview.tex  Main.tex  MainPackages.tex  Method.tex  Preamble.tex  Shortcuts.tex  background_appendix.tex  bibliography.bib  example.bib  refs.bib  ucl_thesis.cls
neurreps/: INSTRUCTIONS.txt  equivariant_transition_models.bib  equivariant_transition_models.tex  (+3 more)
(+9 files in other folders)
