[tool.poetry]
name = "base-rl"
version = "0.1.0"
description = ""
authors = ["seancraven <seanpietercraven@gmail.com>"]
readme = "README.md"
packages = [{ include = "base_rl" }]

[tool.poetry.dependencies]
python = "^3.10"
gymnax = "^0.0.6"
jaxtyping = "^0.2.20"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I", "PL", "D"]
ignore = []

unfixable = ["F401", "F841", "F842", "ARG"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
