[tool.poetry]
name = "g-conv"
version = "0.1.0"
description = ""
authors = ["seancraven <seanpietercraven@gmail.com>"]
readme = "README.md"
packages = [{ include = "c2.py" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
jax = "^0.4.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
