[tool.poetry]
name = "g-conv"
version = "0.1.0"
description = ""
authors = ["sean craven <seanpietercraven@gmail.com>"]
readme = "README.md"
packages = [{include = "g_conv"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
