[tool.poetry]
name = "meta-rl"
version = "0.1.0"
description = ""
authors = ["seancraven <seanpietercraven@gmail.com>"]
readme = "README.md"
packages = [{ include = "meta_rl" }]

[tool.poetry.dependencies]
python = "^3.10"
gymnax = "^0.0.6"
jaxtyping = "^0.2.20"

[tool.ruff]
unfixable = ["F401", "F841", "F842", "ARG"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
