[tool.poetry]
name = "model-based"
version = "0.1.0"
description = ""
authors = ["sean craven <seanpietercraven@gmail.com>"]
readme = "README.md"
packages = [{include = "model_based"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
